Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Peter McCluskey (Nov 13 2001)
  Fixed malloc bug that caused segfault with linkquotes=1.

Peter McCluskey (Nov 12 2001)
  Update to trio-1.4 (from 1.2) to fix Alpha compile problem.

Peter McCluskey (Nov 7 2001)
 Changes to hypetombox.pl:
  - add some support for handling attachments.
  - fixed some problems arising from some tags being changed to lowercase.
  - add -S option to specify htmlsuffix.
  - changed to convert <p> to blank line (instead of to nothing).
  - additions to improve handling of archives produced linkquotes=1 option.

Peter McCluskey (Nov 5 2001)
  - change parse.c to treat lines containing only a carriage return as
 blank lines for purpose of deciding whether they indicate the end of
 headers or a continued header line.

Peter McCluskey (Aug 22 2001)
  - fix Makefile to clean pcre directory.

Peter McCluskey (Aug 7 2001)
  - removed In-Reply-To from mailcommand default.

Peter McCluskey (Jul 25 2001)
  - fix to abort before unlinking gdbm file if need it and cannot open it.
  - fix latest_folder option (didn't work in incremental mode).

Peter McCluskey (Jul 17 2001)
  - patch from Brian Kirkby to fix links between folders with usetable.

Peter McCluskey (Jun 26 2001)
  - fixed parsing of integer/octal/switch environment variable values.
  - fixed bugs in latest_folder option (includes fix from David Bau
     <davidbau@hotmail.com>).

Peter McCluskey (Jun 23 2001)
  - fixed FILES so that hypermail.html gets into tarballs.

Peter McCluskey (May 31 2001)
  - patches from Moritz Willers to surpress empty "messages sorted by:" line,
   add | after "Previous Folder, Thread view", etc.

Peter McCluskey (May 30 2001)
  - changes to Swedish from peter karlsson.

Peter McCluskey (May 22 2001)
  - change default value for avoid_top_indices to none.
  - fixed make to handle pcre properly.

Peter McCluskey (May 16 2001)
  - fix pathnames in inline attachments with msgsperfolder/folder_by_date
